Fix #45 - make bg-* bootstrap classes more readable by changing text colour to white

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,6 +123,10 @@ html{
     color: white;
 }
 
+.bg-danger, .bg-warning, .bg-primary, .bg-success, .bg-info{
+    color: #ffffff;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
